--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 argparse==1.2.1
 envtpl==0.4.1
 boto==2.42.0
-git+https://github.com/APSL/botocore.git
+git+https://github.com/APSL/botocore.git@b497766
 dateutils==0.6.6
 numpy==1.11.0
 pyremotecv==0.5.0
@@ -18,3 +18,4 @@ tc-mongodb==5.1.0
 tc-redis==1.0.1
 pgmagick==0.6.1
 graphicsmagick-engine==0.1.1
+remotecv-aws==0.1
