--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -1,11 +1,10 @@
 [supervisord]
-user=root
+user=nobody
 pidfile = /var/run/supervisord.pid
 nodaemon=true
 
 [program:thumbor]
 command = /usr/src/app/thumbor-entrypoint.sh thumbor
-user = root
 autostart = true
 
 [eventlistener:thumbor_exit]
@@ -15,7 +14,6 @@ events=PROCESS_STATE_EXITED,PROCESS_STATE_FATAL
 
 [program:nginx]
 command = nginx -g 'daemon off;'
-user = root
 autostart = true
 
 
