--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -1,4 +1,8 @@
 [supervisord]
+logfile = /tmp/supervisord.log
+logfile_maxbytes = 50MB
+logfile_backups=10
+loglevel = info
 user=nobody
 pidfile = /var/run/supervisord.pid
 nodaemon=true
@@ -6,6 +10,10 @@ nodaemon=true
 [program:thumbor]
 command = /usr/src/app/thumbor-entrypoint.sh thumbor
 autostart = true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 
 [eventlistener:thumbor_exit]
 command=/usr/src/app/kill.py
@@ -15,6 +23,10 @@ events=PROCESS_STATE_EXITED,PROCESS_STATE_FATAL
 [program:nginx]
 command = nginx -g 'daemon off;'
 autostart = true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 
 
 [eventlistener:nginx_exit]
