run only one process

--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -10,6 +10,7 @@ nodaemon=true
 [program:thumbor]
 command = /usr/src/app/thumbor-entrypoint.sh thumbor
 autostart = true
+numprocs=1
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -23,6 +24,7 @@ events=PROCESS_STATE_EXITED,PROCESS_STATE_FATAL
 [program:nginx]
 command = nginx -g 'daemon off;'
 autostart = true
+numprocs=1
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
