--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -3,12 +3,13 @@ logfile = /tmp/supervisord.log
 logfile_maxbytes = 50MB
 logfile_backups=10
 loglevel = info
+user=nobody
 pidfile = /var/run/supervisord.pid
 nodaemon=true
 
 [program:thumbor]
 command = /usr/src/app/thumbor-entrypoint.sh thumbor
-numprocs=0
+autostart = true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -21,7 +22,7 @@ events=PROCESS_STATE_EXITED,PROCESS_STATE_FATAL
 
 [program:nginx]
 command = nginx -g 'daemon off;'
-numprocs=0
+autostart = true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -32,7 +33,3 @@ stderr_logfile_maxbytes=0
 command=/usr/src/app/kill.py
 process_name=nginx
 events=PROCESS_STATE_EXITED,PROCESS_STATE_FATAL
-
-
-
-
