chaniging supervisor user

--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -3,7 +3,7 @@ logfile = /tmp/supervisord.log
 logfile_maxbytes = 50MB
 logfile_backups=10
 loglevel = info
-user=root
+user=nobody
 pidfile = /var/run/supervisord.pid
 nodaemon=true
 
