--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 argparse==1.4.0
 boto==2.49.0
-botocore==1.11.7
+git+https://github.com/APSL/botocore.git@b497766
 dateutils==0.6.6
 envtpl==0.6.0
 graphicsmagick-engine==0.1.1
@@ -9,8 +9,6 @@ opencv-engine==1.0.1
 pgmagick==0.7.4
 pyremotecv==0.5.0
 raven==6.7.0
-remotecv-aws==0.1
-remotecv==2.2.2
 tc-aws==6.2.10
 tc-core==0.4.0
 tc-mongodb==5.1.0
