specify-non-root-users-for-thumbor-and-ngnix

--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -14,6 +14,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+user=nobody
 
 [eventlistener:thumbor_exit]
 command=/usr/src/app/kill.py
@@ -27,7 +28,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-
+user=nobody
 
 [eventlistener:nginx_exit]
 command=/usr/src/app/kill.py
