temporaly removing supervisor for demonstration purposes

--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -1,9 +1,12 @@
+[unix_http_server]
+chown = nobody
+
 [supervisord]
 logfile = /tmp/supervisord.log
 logfile_maxbytes = 50MB
 logfile_backups=10
 loglevel = info
-user=root
+user=nobody
 pidfile = /var/run/supervisord.pid
 nodaemon=true
 
@@ -14,7 +17,6 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-user=nobody
 
 [eventlistener:thumbor_exit]
 command=/usr/src/app/kill.py
@@ -28,7 +30,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-user=nobody
+
 
 [eventlistener:nginx_exit]
 command=/usr/src/app/kill.py
